<resources>
    <string name="app_name">PeerRequest</string>
    <string name="log_in">Log In</string>
    <string name="enter_username">Enter Username</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="create_password">Create Password</string>
    <string name="create_username">Create Username</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_3_days_ago">3 days ago</string>
    <string name="jabez_agyemang_p">Jabez Agyemang-P</string>
    <string name="hey_i_d_love_for_someone_to_go_pick_up_my_groceries_from_the_sea_to_the_seashore_and_take_it_to_ghana_if_not_possible_lorem_ipsum_lorem_lol_lol_lol">Hey, I\'d Love for someone to go pick up my groceries from the sea to the seashore and take it to ghana if not possible lorem ipsum lorem lol lol lol</string>
    <string name="grocery_pick_up">Grocery Pick-Up</string>
    <string name="button">Button</string>
    <string name="profileimage">profileimage</string>
    <string name="edit_task">Edit Task</string>
    <string name="title_description">Title: Description</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="why_you_please_enter_a_short_reason_why_you_would_want_to_complete_this_task">Why You? Please Enter A Short Reason Why You Would Want To Complete This Task</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="message_hint">message</string>
    <string name="send">send</string>
    <string name="profile_other">profile_other</string>
    <string name="profile_me">profile_me</string>
    <string name="facebook_app_id">759848765212203</string>
    <string name="fb_login_protocol_scheme">fb759848765212203</string>
    <string name="facebook_client_token">643dbf893c9101a50dc641df9c3a3de3</string>
    <string name="gravatarURL">https://www.gravatar.com/avatar/</string>
    <string name="gravatarIdenticon">\?d=identicon</string>
    <string name="accepted_string">Accepted</string>
    <string name="Pending">Pending</string>
    <string name="no_task_selected">No Task Selected</string>
    <string name="google_geo_api_key">AIzaSyCoCwSx-6xJxd4ei5v6npdpP4iE26HWe6o</string>
    <string name = "google_cloud_messaging_key">757228767265</string>
    <string name = "parse_push_client_key">uSjAlaUCwE5Xea1NrATQKL720IX1cBVwjeSYpYbg</string>
    <string name="parse_application_id">hUmtd9kBemW1I8liVWh4nTrHMGrEIhsINSODohCh</string>
</resources>