<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <EditText
        android:id="@+id/etSignUpName"
        android:layout_width="257dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/create_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/ivLogoSignUp"
        app:layout_constraintStart_toStartOf="@+id/ivLogoSignUp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoSignUp" />

    <EditText
        android:id="@+id/etSignUpPasword"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/create_password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/etSignUpName"
        app:layout_constraintStart_toStartOf="@+id/etSignUpName"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpName" />

    <ImageView
        android:id="@+id/ivLogoSignUp"
        android:layout_width="283dp"
        android:layout_height="168dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_launcher_background"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpPasword"
        app:layout_constraintVertical_bias="0.114" />
</androidx.constraintlayout.widget.ConstraintLayout>