<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        tools:context=".activities.ItemTask">

        <ImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/jabez_agyemang_p"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
            app:layout_constraintTop_toTopOf="@+id/ivProfilePicture" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:text="@string/_3_days_ago"
            android:textColor="#2196F3"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvUserName" />

        <TextView
            android:id="@+id/tvTaskTitile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/grocery_pick_up"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="@+id/ivProfilePicture"
            app:layout_constraintTop_toBottomOf="@+id/ivProfilePicture" />

        <TextView
            android:id="@+id/tvTaskDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/hey_i_d_love_for_someone_to_go_pick_up_my_groceries_from_the_sea_to_the_seashore_and_take_it_to_ghana_if_not_possible_lorem_ipsum_lorem_lol_lol_lol"
            app:layout_constraintStart_toStartOf="@+id/tvTaskTitile"
            app:layout_constraintTop_toBottomOf="@+id/tvTaskTitile" />

        <TextView
            android:id="@+id/tvItemTaskRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="TextView"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Rating:"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/tvItemTaskRating"
            app:layout_constraintStart_toStartOf="@+id/tvUserName"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>